# stepikCourse

./: 24465-step6.txt  CMakeLists.txt  stepik-512_24458-step9.py  stepik-512_24460-step9.py  stepik-512_24460-step9.txt  stepik-512_24461-step9.py  stepik-512_24462-step7.py  stepik-512_24462-step7.txt  stepik-512_24462-step8.py  stepik-512_24462-step8.txt  stepik-512_24462-step9.py  stepik-512_24462-step9.txt  stepik-512_24463-step6.txt  stepik-512_24463-step7.py  stepik-512_24463-step7.txt  stepik-512_24463-step9.py  test.py
24459/: stepik-512_24459-step9.py
24460/: stepik-512_24460-step9.py
24461/: stepik-512_24461-step8.py  stepik-512_24461-step9.py
24462/: stepik-512_24462-step7.py  stepik-512_24462-step8.py
24463/: stepik-512_24463-step6.py  stepik-512_24463-step9.txt
24464/: stepik-512_24464-step4.py  stepik-512_24464-step4.txt  stepik-512_24464-step5.py  stepik-512_24464-step5.txt
24465/: foutput.txt  stepik-512_24465-step4.py
24466/: stepik-512_24466-step5.py  stepik-512_24466-step5.txt  stepik-512_24466-step9.txt
24468/: stepik-512_24468-step3.py  stepik-512_24468-step4.py  stepik-512_24468-step6.txt
24469/: stepik-512_24469-step3.py  stepik-512_24469-step4.py  stepik-512_24469-step5.py  stepik-512_24469-step6.py  stepik-512_24469-step6.txt  stepik-512_24469-step7.txt
24470/: stepik-512_24470-step11.py  stepik-512_24470-step11.txt  stepik-512_24470-step12.txt  stepik-512_24470-step13.py  stepik-512_24470-step14.py  stepik-512_24470-step15.py  stepik-512_24470-step16.py  stepik-512_24470-step16.txt  stepik-512_24470-step3.py  (+6 more)
(+88 files in other folders)
